--- a/webVersione/scss/style.scss
+++ b/webVersione/scss/style.scss
@@ -37,7 +37,7 @@ body {
 // ==========================================
 
 .header {
-    padding: 32px;
+    padding: 32px 32px 32px 0;
 
     // .header__menu
     &__menu {}
@@ -49,7 +49,7 @@ body {
 
     // .menu__logo
     &__logo {
-        margin-right: 125px;
+        margin-right: 75px;
     }
 
     // .menu__items
@@ -67,11 +67,15 @@ body {
     }
 
     // .menu__burger
-    &__burger {}
+    &__burger {
+        align-self: center;
+    }
 }
 
 
-.logo {}
+.logo img {
+    max-width: 100px;
+}
 
 .main {
 
