--- a/webVersione/css/style.css
+++ b/webVersione/css/style.css
@@ -65,9 +65,14 @@ a:hover {
   background-size: 100% 2px;
 }
 
+.link-red {
+  color: #FF2625;
+}
+
 body {
   font-family: "Alegreya";
   font-size: 22px;
+  background-color: #FFFAFB;
 }
 
 [class*=__container] {
@@ -183,7 +188,8 @@ svg {
 }
 
 .header {
-  padding: 32px 32px 32px 0;
+  padding: 20px 32px 32px 0;
+  margin-bottom: 20px;
 }
 @media (max-width: 900px) {
   .header {
@@ -246,7 +252,7 @@ svg {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 80px 10px 170px 10px;
+  padding: 10px 10px 170px 10px;
   gap: 50px;
 }
 @media (max-width: 1150px) {
@@ -263,7 +269,7 @@ svg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 25px;
+  gap: 45px;
 }
 @media (max-width: 1150px) {
   .block-main__buttons {
@@ -287,12 +293,16 @@ svg {
   }
 }
 .block-main__image img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 1000px;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+  border-radius: 5px 5px 5px 35px;
 }
 @media (min-width: 1150px) {
   .block-main__image img {
     position: absolute;
-    bottom: -50px;
+    bottom: 0px;
     left: 50px;
     width: 100%;
     height: auto;
@@ -302,7 +312,7 @@ svg {
 
 .block-main__image::after {
   content: url("../img/ico/Dots.svg");
-  bottom: -120px;
+  bottom: -80px;
   right: 0px;
   position: absolute;
 }
@@ -319,7 +329,7 @@ svg {
 }
 
 .block-main__container::before {
-  content: url("../img/main/quadrati.png");
+  content: url("../img/main/mainBlock/quadrati.png");
   top: 0px;
   left: -150px;
   position: absolute;
@@ -339,4 +349,58 @@ svg {
     max-width: 100%;
     color: hsla(0, 100%, 57%, 0.05);
   }
+}
+
+.block-StepByStep__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 40px 10px 170px 10px;
+}
+.block-StepByStep__titles {
+  -ms-flex-item-align: center;
+      align-self: center;
+  padding: 40px 0;
+}
+.block-StepByStep__titles .titles-main__subTitle {
+  text-align: center;
+}
+.cards-services {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
+}
+
+.card-service {
+  background-color: #fff;
+  border-radius: 5px 5px 5px 35px;
+  border: rgba(255, 37, 37, 0.5411764706) 1px solid;
+  padding: 65px 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.card-service__image {
+  text-align: center;
+}
+.card-service__image img {
+  width: 75px;
+}
+.card-service__title {
+  font-size: 24px;
+  font-weight: 800;
+  text-align: center;
+  height: 50px;
+}
+.card-service__text {
+  text-align: justify;
 }
