--- a/webVersione/scss/style.scss
+++ b/webVersione/scss/style.scss
@@ -15,11 +15,16 @@ a:hover {
     background-size: 100% 2px;
 }
 
+.link-red {
+    color: #FF2625;
+}
+
 // ==================BODY========================
 
 body {
     font-family: "Alegreya";
     font-size: 22px;
+    background-color: #FFFAFB;
 }
 
 .wrapper {
@@ -149,7 +154,8 @@ svg {
 // ================Header==========================
 
 .header {
-    padding: 32px 32px 32px 0;
+    padding: 20px 32px 32px 0;
+    margin-bottom: 20px;
 
     // .header__menu
     &__menu {}
@@ -210,6 +216,7 @@ svg {
     &__block {}
 }
 
+// ================Section BLOCK MAIN==========================
 .block-main {
     position: relative;
 
@@ -217,7 +224,7 @@ svg {
     &__container {
         display: flex;
         justify-content: space-between;
-        padding: 80px 10px 170px 10px;
+        padding: 10px 10px 170px 10px;
         gap: 50px;
 
         @media (max-width: 1150px) {
@@ -234,7 +241,7 @@ svg {
     &__buttons {
         max-width: 100%;
         display: flex;
-        gap: 25px;
+        gap: 45px;
 
         @media (max-width: 1150px) {
             align-self: center;
@@ -253,14 +260,18 @@ svg {
             position: relative;
             padding-top: 56.25%;
             width: 100%;
+
         }
 
         img {
-            width: 100%;
+            max-width: 100%;
+            max-height: 1000px;
+            object-fit: scale-down;
+            border-radius: 5px 5px 5px 35px;
 
             @media (min-width: 1150px) {
                 position: absolute;
-                bottom: -50px;
+                bottom: 0px;
                 left: 50px;
                 width: 100%;
                 height: auto;
@@ -273,7 +284,7 @@ svg {
 
 .block-main__image::after {
     content: url("../img/ico/Dots.svg");
-    bottom: -120px;
+    bottom: -80px;
     right: 0px;
     position: absolute;
 
@@ -288,7 +299,7 @@ svg {
 }
 
 .block-main__container::before {
-    content: url("../img/main/quadrati.png");
+    content: url("../img/main/mainBlock/quadrati.png");
     top: 0px;
     left: -150px;
     position: absolute;
@@ -311,5 +322,90 @@ svg {
     }
 }
 
+// ================Section STEP BY STEP==========================
+.main {
 
+    // .main__StepByStep
+    &__StepByStep {}
+}
+
+.block-StepByStep {
+
+    // .block-StepByStep__container
+    &__container {
+        display: flex;
+        flex-direction: column;
+        padding: 40px 10px 170px 10px;
+    }
+
+    // .block-StepByStep__titles
+    &__titles {
+        align-self: center;
+        padding: 40px 0;
+
+        .titles-main__subTitle {
+            text-align: center;
+        }
+    }
+
+    // .block-StepByStep__cards
+    &__cards {}
+}
+
+.titles-main {
+
+    // .titles-main__subTitle
+    &__subTitle {}
+
+    // .titles-main__title
+    &__title {}
+}
+
+.cards-services {
+    // display: flex;
+    // justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+}
+
+.card-service {
+    // max-width: 300px;
+    background-color: #fff;
+    border-radius: 5px 5px 5px 35px;
+    border: #ff25258a 1px solid;
+    padding: 65px 35px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+
+    // .card-service__image
+    &__image {
+        text-align: center;
+
+        img {
+            width: 75px;
+
+        }
+    }
+
+    // .card-service__title
+    &__title {
+        font-size: 24px;
+        font-weight: 800;
+        text-align: center;
+        height: 50px;
+    }
+
+    // .card-service__text
+    &__text {
+        text-align: justify;
+    }
+}
+
+
+
+// ================footer==========================
 .footer {}
