--- a/webVersione/css/style.css
+++ b/webVersione/css/style.css
@@ -50,8 +50,82 @@ html {
 }
 
 /* ================================================================ */
-.flex img {
+.log-in {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
+}
+.log-in .logo {
+  width: 44px;
+}
+.log-in .menu__logo {
+  margin-right: 0;
+}
+.log-in .header {
+  width: 100%;
+  padding: 20px 0;
+}
+.log-in .footer {
+  width: 100%;
+}
+
+ul {
+  margin-bottom: 0;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.access_text {
+  font-size: 44px;
+  font-weight: 700;
+}
+
+.color-red {
+  color: #FF2625;
+}
+
+.container {
+  margin: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+}
+.container * {
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 100%;
+}
+
+.col2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
 }
 
 body {
@@ -226,12 +300,14 @@ svg {
 }
 
 .header {
-  padding: 0px 32px 0px 0;
   background-color: #FFF3F4;
+}
+.header__container {
+  padding: 0 0;
 }
 @media (max-width: 900px) {
   .header {
-    padding: 32px 0px 32px 0;
+    padding: 0px 0;
   }
 }
 
@@ -580,19 +656,19 @@ svg {
 
 .footer {
   background-color: #FFF3F4;
-  padding: 25px 0;
+  padding: 10px 0 25px 0;
   text-align: center;
 }
 .footer__container {
   padding: 0;
   display: grid;
-  grid-template-columns: 100px 1fr;
+  grid-template-columns: 150px 1fr;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 .footer__logo {
-  grid-row: 1/span 2;
+  text-align: center;
   width: 100px;
   display: block;
   overflow: hidden;
@@ -605,4 +681,38 @@ svg {
 }
 .footer__bottomText {
   font-size: 14px;
+}
+
+.social-contacts {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.social-contacts a {
+  display: block;
+}
+.social-contacts a img {
+  width: 30px;
+}
+
+.footer__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-row: 1/span 2;
 }
