add social footer to page sign-in and log-in

--- a/webVersione/css/log-in.css
+++ b/webVersione/css/log-in.css
@@ -75,3 +75,10 @@ ul {
   grid-template-columns: 1fr 1fr;
   gap: 15px;
 }
+
+#inputPassword {
+  -ms-flex-item-align: center;
+      align-self: center;
+  max-width: 370px;
+  margin: 0 auto;
+}
