--- a/webVersione/scss/log-in.scss
+++ b/webVersione/scss/log-in.scss
@@ -86,3 +86,9 @@ ul {
     grid-template-columns: 1fr 1fr;
     gap: 15px;
 }
+
+#inputPassword {
+    align-self: center;
+    max-width: 370px;
+    margin: 0 auto;
+}
