--- a/webVersione/css/style.css
+++ b/webVersione/css/style.css
@@ -128,6 +128,13 @@ ul {
   gap: 15px;
 }
 
+#inputPassword {
+  -ms-flex-item-align: center;
+      align-self: center;
+  max-width: 370px;
+  margin: 0 auto;
+}
+
 body {
   font-family: "Alegreya";
   font-size: 22px;
@@ -552,7 +559,7 @@ svg {
 }
 
 .block-benefits__container {
-  padding: 40px 10px 170px 10px;
+  padding: 40px 10px 100px 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -656,7 +663,7 @@ svg {
 
 .footer {
   background-color: #FFF3F4;
-  padding: 10px 0 25px 0;
+  padding: 15px 0;
   text-align: center;
 }
 .footer__container {
@@ -666,6 +673,7 @@ svg {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 20px;
 }
 .footer__logo {
   text-align: center;
@@ -678,11 +686,9 @@ svg {
 .footer__topText {
   color: #A69B9B;
   font-size: 22px;
-  margin-bottom: -30px;
 }
 .footer__bottomText {
   font-size: 14px;
-  margin-bottom: -30px;
 }
 
 .social-contacts {
