added visibility position for htm no responsive

--- a/webVersione/scss/log-in.scss
+++ b/webVersione/scss/log-in.scss
@@ -92,3 +92,9 @@ ul {
     max-width: 370px;
     margin: 0 auto;
 }
+.visibility{
+  position: relative;
+  left: 280px;
+  bottom: 30px;
+  width: 24px;
+}
