--- a/webVersione/css/log-in.css
+++ b/webVersione/css/log-in.css
@@ -82,3 +82,9 @@ ul {
   max-width: 370px;
   margin: 0 auto;
 }
+.visibility{
+  position: relative;
+  left: 280px;
+  bottom: 30px;
+  width: 24px;
+}
